--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
   },
   "dependencies": {
     "dotenv": "^5.0.1",
-    "mysql": "^2.15.0",
-    "truffle-hdwallet-provider": "0.0.3",
-    "zeppelin-solidity": "^1.5.0"
+    "mysql": "^2.16.0",
+    "zeppelin-solidity": "^1.12.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "truffle-hdwallet-provider": "0.0.6"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
